# xsdk-examples

./: .cmake-format.py  CMakeLists.txt  LICENSE  README.md
amrex/: CMakeLists.txt
amrex/sundials/: CMakeLists.txt  README.md  amrex_sundials_advection_diffusion.cpp  amrex_sundials_advection_diffusion.cpp~  amrex_sundials_advection_diffusion.h  amrex_sundials_advection_diffusion.h~  inputs
cmake/: FindAMReX.cmake  FindBLASPP.cmake  FindHYPRE.cmake  FindLAPACKPP.cmake  FindMAGMA.cmake  FindMETIS.cmake  FindMFEM.cmake  FindPETSc.cmake  FindPLASMA.cmake  FindSLATE.cmake  FindSUNDIALS.cmake  FindSUPERLUDIST.cmake  XsdkAddTest.cmake
dealii/: CMakeLists.txt  README.md
dealii/petsc_trilinos/: CMakeLists.txt  README.md  petsc_trilinos.cc
dealii/precice/: CMakeLists.txt  README.md  clean  laplace_problem.cc  runtargets.sh
dealii/sundials/: CMakeLists.txt  README.md  sundials.cc
heffte/: CMakeLists.txt  README.md  heffte_example_gpu.cpp
hypre/: CMakeLists.txt  README.md  ij_laplacian.c  vis.c
hypre/vis/: glvis-ij-laplacian.sh
libensemble/: .test_persistent_aposmm_tao.py.kate-swp  README.md  persistent_aposmm.py  persistent_aposmm_alloc.py  test_persistent_aposmm_tao.py
mfem/: CMakeLists.txt
mfem/data/: README.md
mfem/data/pumi/parallel/KovaLinear/: Kova-linear-10k_2p0.smb  Kova-linear-10k_2p1.smb
mfem/ginkgo/: CMakeLists.txt  Example_CMakeLists.txt  GINKGO-LICENSE  README.md  mfem_ex1_gko.cpp  mfem_ex22_gko.cpp  mfem_wrapper.cpp  mfem_wrapper.hpp
mfem/hiop/: CMakeLists.txt  README.md  adv.cpp
mfem/hypre/: CMakeLists.txt  README.md  magnetic-diffusion.cpp
mfem/hypre-superlu/: CMakeLists.txt  README.md  convdiff.cpp  makefile
mfem/petsc/: CMakeLists.txt  README.md  obstacle.cpp
mfem/pumi/: CMakeLists.txt  README.md  adapt.cpp
mfem/strumpack/: CMakeLists.txt  README.md  diffusion-eigen.cpp
mfem/sundials/: CMakeLists.txt  README.md  advection.cpp  transient-heat.cpp
petsc/: CMakeLists.txt  README.md  makefile
plasma/: CMakeLists.txt  README.md  ex1solve.cpp
strumpack/: CMakeLists.txt  README.md  sparse.cpp
sundials/: CMakeLists.txt  README.md  README.tex.md  ark_brusselator1D_FEM_sludist.cpp  cv_bruss_batched_magma.cpp
sundials/cmake/: FindSUNDIALS.cmake
tasmanian/: CMakeLists.txt  README.md  example_unstructured_grid.cpp
tools/: package.py
trilinos/: CMakeLists.txt  README.md  SimpleSolve.cpp  SimpleSolve_WithParameters.cpp
